--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev-mac": "~/.npm-global/bin/nodemon ./bin/www"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "axios": "^1.6.7",
+    "date-fns": "^3.3.1",
+    "express": "^4.18.2",
+    "lodash.round": "^4.0.4",
+    "mongodb": "^6.3.0"
   }
 }
