--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "date-fns": "^3.3.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "lodash.round": "^4.0.4",
     "mongodb": "^6.3.0"
